# spdx-license

./: CHANGELOG.md  README.md  cabal.project  flake.nix  hie.yaml  spdx-license.cabal
src/Distribution/SPDX/: Template.hs
test/: Spec.hs
