cabal-version: 3.0
name:          spdx-license
version:       0.1.0

-- synopsis:
-- description:
-- category:
-- license:
license-file:  LICENSE
author:        poscat
maintainer:    poscat <poscat@mail.poscat.moe>
copyright:     Copyright (c) poscat 2020
stability:     alpha
homepage:      https://github.com/poscat0x04/spdx-license
bug-reports:   https://github.com/poscat0x04/spdx-license/issues

common common-attrs
  build-depends:
    , base           >=4.10 && <5
    , regex-tdfa
    , megaparsec

  default-language:   Haskell2010

library
  import:          common-attrs
  build-depends:

  exposed-modules:

  other-modules:
  hs-source-dirs:  src

test-suite spdx-license-test
  import:          common-attrs
  type:            exitcode-stdio-1.0
  build-depends:
    , spdx-license

  hs-source-dirs:  test
  main-is:         Spec.hs

source-repository head
  type:     git
  location: https://github.com/poscat0x04/spdx-license
